Feat: Changed Homepage

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "HelloQuery-client",
-  "homepage": "https://<USERNAME>.github.io/<REPO NAME>",
+  "homepage": "https://teejaymoo.github.io/HelloQuery-client",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
